# picbin

./: .gitignore  Cargo.toml  README.md  go.mod  index.ts  main.go  main.py  package-lock.json  package.json  router.ts  tsconfig.json
datacls/: __init__.py  file.py
migrations/2025-03-19-143051_init/: down.sql  up.sql
prisma/: schema.prisma
routes/: RoutesBlueprint.py  __init__.py  burn.py  dank_api.py  index.py  retrieve.py  upload.py
src/: CLI.ts  Main.ts  config.rs  file.rs  image.rs  main.rs  pages.rs  random.rs  tire.rs  view.rs
src/clients/: Multer.ts  Prisma.ts
src/database/: mod.rs  models.rs  schema.rs
src/routers/: Auth.ts  Image.ts  Profile.ts
static/css/: style.css
static/ejs/pages/: home.ejs  me.ejs
static/ejs/partials/: bar.ejs  meta.ejs
static/html/: index.html
templates/: index.hbs  index.html  plain.hbs
utils/: __init__.py  configuration.py  json_manipulator.py  query_parser.py
utils/files/: __init__.py  filegen.py  filegentype.py  hash_image.py
