[package]
name = "bin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rand = "0.8.5"
serde = "1.0.147"
multipart = "0.18.0"
mime_guess = "2.0.4"
rust-ini = "0.18.0"
sha256 = "1.1.1"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }